# CelineBio_RZ

./: Immuno_Foundation_Model.ipynb  README.md  pyproject.toml
configs/: example.yaml
src/immunofoundation/: __init__.py  cli.py  clues.py  config.py  foundation.py  io_utils.py  logging_utils.py  manifest.py  report.py  rotterdam.py  rpy2_utils.py  scoring.py
tests/: test_alignment.py  test_validations.py
