[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "immunofoundation"
version = "0.1.0"
description = "ImmunoFoundationModel pipeline for reproductive health transcriptomics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "ImmunoFoundationModel Team"}]
dependencies = [
  "pandas>=2.1",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "pyarrow>=14.0",
  "joblib>=1.3",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]

[project.optional-dependencies]
training = ["torch>=2.1"]
rpy2 = ["rpy2>=3.5"]

[project.scripts]
immunofoundation = "immunofoundation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
